# release-testing2

./: Cargo.toml  pyproject.toml
.github/workflows/: release.yaml
crates/ruff_cli/: Cargo.toml
